# RobWork

./: .gitignore
RobWork/: CMakeLists.txt  concurrent-popping-meadow.md
RobWork/RobWork/: CMakeLists.txt
RobWork/RobWork/cmake/: RobWorkBuildConfig.cmake.in  RobWorkConfig.cmake.in  RobWorkMacros.cmake  RobWorkSetup.cmake
RobWork/RobWork/cmake/Modules/: FindQhull.cmake
RobWork/RobWork/example/ModelData/: GenericSixAxis.wc.xml
RobWork/RobWork/ext/: CMakeLists.txt
RobWork/RobWork/ext/rwyaobi/: CMakeLists.txt
RobWork/RobWork/src/: RobWorkConfig.hpp.in
RobWork/RobWork/src/rw/: CMakeLists.txt
RobWork/RobWorkSim/cmake/: RobWorkSimSetup.cmake
RobWork/RobWorkSim/cmake/Modules/: FindODE.cmake
RobWork/RobWorkSim/gtest/: CMakeLists.txt
RobWork/RobWorkStudio/: CMakeLists.txt
RobWork/RobWorkStudio/cmake/: RobWorkStudioConfig.cmake.in  RobWorkStudioMacros.cmake  RobWorkStudioSetup.cmake
RobWork/RobWorkStudio/example/UDPKinPlugin/: SamplePlugin.cpp  SamplePlugin.hpp
RobWork/RobWorkStudio/example/pluginUIapp/: SamplePlugin.cpp
RobWork/RobWorkStudio/ext/qtpropertybrowser/: CMakeLists.txt  qttreepropertybrowser.moc_parameters
RobWork/RobWorkStudio/gtest/: CMakeLists.txt
RobWork/RobWorkStudio/src/: CMakeLists.txt  main.cpp
RobWork/RobWorkStudio/src/rws/: CMakeLists.txt  RobWorkStudio.cpp  SceneOpenGLViewer.cpp  SceneOpenGLViewer.hpp
RobWork/RobWorkStudio/src/rwslibs/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/atask/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/gtask/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/jog/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/kinematicanalysis/: CMakeLists.txt  KinematicAnalysisCollision.cpp  KinematicAnalysisCollision.hpp  KinematicAnalysisEnvelope.cpp  KinematicAnalysisEnvelope.hpp  KinematicAnalysisJson.cpp  KinematicAnalysisJson.hpp  KinematicAnalysisPlotWidget.cpp  KinematicAnalysisPlotWidget.hpp  KinematicAnalysisPlugin.cpp  KinematicAnalysisPlugin.hpp  KinematicAnalysisPoseReachability.cpp  KinematicAnalysisPoseReachability.hpp  KinematicAnalysisTest.cpp  KinematicAnalysisTypes.cpp  KinematicAnalysisTypes.hpp  KinematicAnalysisUiLogic.cpp  KinematicAnalysisUiLogic.hpp  KinematicAnalysisVisualizationTypes.cpp  KinematicAnalysisVisualizationTypes.hpp  KinematicAnalysisWidget.cpp  KinematicAnalysisWidget.hpp  KinematicAnalysisWorkspace.cpp  KinematicAnalysisWorkspace.hpp  KinematicAnalyzer.cpp  KinematicAnalyzer.hpp  KinematicMetrics.cpp  KinematicMetrics.hpp  PoseReachabilitySmoke.md  README.md  TaskPointDelegates.cpp  TaskPointDelegates.hpp  TaskPointResolver.cpp  TaskPointResolver.hpp  TaskPointTableModel.cpp  TaskPointTableModel.hpp  TaskPointUiLogic.cpp  TaskPointUiLogic.hpp  plugin.json  resources.qrc
RobWork/RobWorkStudio/src/rwslibs/log/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/lua/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/luaeditor/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/planning/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/playback/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/propertyview/: PropertyView.cpp
RobWork/RobWorkStudio/src/rwslibs/pythoneditor/: Editor.cpp
RobWork/RobWorkStudio/src/rwslibs/robotanalysiscore/: CMakeLists.txt  RobotAnalysisCoreTest.cpp  RobotAnalysisCsv.cpp  RobotAnalysisCsv.hpp  RobotAnalysisJson.cpp  RobotAnalysisJson.hpp  RobotAnalysisTypes.cpp  RobotAnalysisTypes.hpp  RobotAnalysisValidation.cpp  RobotAnalysisValidation.hpp
RobWork/RobWorkStudio/src/rwslibs/robotmodelbuilder/: CMakeLists.txt  RobotModelBuilderPlugin.cpp  RobotModelBuilderPlugin.hpp  RobotModelBuilderWidget.cpp  RobotModelBuilderWidget.hpp  RobotModelSpec.hpp  RobotModelSpecJson.cpp  RobotModelSpecJson.hpp  RobotModelSpecJsonTest.cpp  RobotModelUrdfImporter.cpp  RobotModelUrdfImporter.hpp  RobotModelXmlWriter.cpp  RobotModelXmlWriter.hpp  RobotModelXmlWriterTest.cpp  plugin.json
RobWork/RobWorkStudio/src/rwslibs/rwstudioapp/: CMakeLists.txt  RobWorkStudioApp.cpp  RobWorkStudioApp.hpp
RobWork/RobWorkStudio/src/rwslibs/sensors/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/structureoptimizer/: CMakeLists.txt  CandidateModelFactory.cpp  CandidateModelFactory.hpp  HybridStructureOptimizer.cpp  HybridStructureOptimizer.hpp  OptimizationTaskTableModel.cpp  OptimizationTaskTableModel.hpp  README.md  StructureCandidateCache.cpp  StructureCandidateCache.hpp  StructureCandidateEvaluator.cpp  StructureCandidateEvaluator.hpp  StructureCandidateExporter.cpp  StructureCandidateExporter.hpp  StructureCandidateGenerator.cpp  StructureCandidateGenerator.hpp  StructureCandidateTableModel.cpp  StructureCandidateTableModel.hpp  StructureDesignMutator.cpp  StructureDesignMutator.hpp  StructureObjectiveScorer.cpp  StructureObjectiveScorer.hpp  StructureOptimizationController.cpp  StructureOptimizationController.hpp  StructureOptimizationCsv.cpp  StructureOptimizationCsv.hpp  StructureOptimizationJson.cpp  StructureOptimizationJson.hpp  StructureOptimizationStrategy.hpp  StructureOptimizationTest.cpp  StructureOptimizationTypes.hpp  StructureOptimizationUiLogic.cpp  StructureOptimizationUiLogic.hpp  StructureOptimizationValidation.cpp  StructureOptimizationValidation.hpp  StructureOptimizerPlugin.cpp  StructureOptimizerPlugin.hpp  StructureOptimizerWidget.cpp  StructureOptimizerWidget.hpp  StructureSensitivityAnalyzer.cpp  (+5 more)
RobWork/RobWorkStudio/src/rwslibs/swig/java/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/swig/lua/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/swig/python/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/treeview/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/workcelleditor/: CMakeLists.txt
RobWork/RobWorkStudio/src/rwslibs/workcelleditorplugin/: CMakeLists.txt
RobWork/docs/: RobotModelBuilder.md  RobotModelBuilderDynamics.md
RobWork/docs/superpowers/plans/: 2026-07-02-robot-model-builder-frames-slanted-links.md  2026-07-02-robot-model-builder-kinematics-sync.md  (+2 more)
docs/superpowers/plans/: 2026-07-01-robot-model-builder.md
docs/superpowers/specs/: 2026-07-01-robot-model-builder-design.md
(+35 files in other folders)
